# FindMovie

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 0343930ce53d_initial_schema.py  bedbe19c0a24_fix_typo_qquery_params_to_query_params.py
src/: config.py  depends.py  main.py
src/api/middlewares/: log_middleware.py
src/api/routers/: __init__.py  movie.py
src/api/schemas/: movie_schemas.py  request_logs_shemas.py
src/app_layer/dto/: movie_dto.py  request_logs_dto.py
src/app_layer/interfaces/: __init__.py  clients.py  muvie_repository.py  request_logs_repository.py
src/app_layer/use_cases/: __init__.py  muvie_service.py  request_logs_service.py
src/domain/entities/: __init__.py  movie_entity.py  request_log_entity.py
src/infra/clients/: omdb_client.py
src/infra/db/: __init__.py  session.py
src/infra/db/models/: movie_model.py  request_log_model.py
src/infra/repositories/: movie_repository.py  request_log_repository.py
